--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FundamentalsExercise8</string>
+    <string name="title_download">Download</string>
 </resources>
